add_definitions(-O2 -s -Wfatal-errors)
include_directories ("${PROJECT_SOURCE_DIR}/inc" "/usr/include/bullet/")
link_libraries(OgreMain OIS BulletCollision BulletDynamics)
add_executable(mud MudException.cpp MudUtils.cpp MudHashmapManager.cpp MudEntity.cpp MudVisibleEntity.cpp MudSceneryEntity.cpp MudContainerEntity.cpp MudCharacterEntity.cpp MudCollectableEntity.cpp MudVisibleEntityProperties.cpp MudSceneryEntityProperties.cpp MudContainerEntityProperties.cpp MudItem.cpp MudInventory.cpp MudEntityTemplate.cpp MudSceneryEntityTemplate.cpp MudContainerEntityTemplate.cpp MudCollectableEntityTemplate.cpp MudEntityTemplateManager.cpp MudEntityManager.cpp MudCharacterController.cpp MudTextBox.cpp MudTextBoxManager.cpp MudConsole.cpp MudWorld.cpp MudCore.cpp Main.cpp)
add_custom_command(TARGET mud POST_BUILD COMMAND ./post.sh)
